# fudosan-ontology

./: .gitignore  GETTING_STARTED.md  LICENSE  MANIFESTO.md  README.en.md  README.md  SPEC.md  build.py  index.html  input_template.csv  mcp_server.py  ontology.md  ontology.py  package.json  pyproject.toml  resolutions.json  sample_terms.csv  test_mcp.py  test_ontology.py
data/: alias_index.json  known_surfaces.json  ontology.json
docs/: RISK_BRIDGE.md  verification-log.md
domains/: _supplement.json  baibai.json  chintai.json  chousa.json  conditions.json  hyoki.json  keiyaku.json  kinyu.json  ryokan.json  shueki.json  slang.json  touki.json
fudosan_ontology/: __init__.py  cli.py  mcp_server.py  ontology.py  wizard.py
src/: normalize.js  resolve.js  server.js  wizard.js
test/: test_node.js  test_parity.js
tests/: test_mcp.py  test_ontology.py
