[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fudosan-ontology"
version = "0.1.0"
description = "Open Japanese real-estate terminology & name-matching ontology with a zero-dependency, fully-local MCP server (377 terms / 10 domains)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kotowari Inc." }]
keywords = ["real-estate", "ontology", "japanese", "mcp", "nlp", "entity-resolution", "proptech", "dictionary"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Japanese",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/shoeiiwaya/fudosan-ontology"
Issues = "https://github.com/shoeiiwaya/fudosan-ontology/issues"

[project.scripts]
fudosan-ontology = "fudosan_ontology.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fudosan_ontology"]

[tool.hatch.build.targets.sdist]
include = ["fudosan_ontology", "README.md", "README.en.md", "LICENSE", "SPEC.md", "docs", "pyproject.toml"]
