[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fudosan-ontology"
version = "0.1.0"
description = "Standardize messy Japanese real-estate text (addresses, listings, inquiries) with AI — an open, zero-dependency workflow tool with a 377-term name-matching dictionary and a local MCP server."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kotowari Inc." }]
keywords = ["real-estate", "ontology", "japanese", "mcp", "nlp", "entity-resolution", "proptech", "dictionary"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Japanese",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/shoeiiwaya/fudosan-ontology"
Issues = "https://github.com/shoeiiwaya/fudosan-ontology/issues"

[project.scripts]
fudosan-ontology = "fudosan_ontology.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fudosan_ontology"]

[tool.hatch.build.targets.sdist]
include = ["fudosan_ontology", "README.md", "README.en.md", "LICENSE", "SPEC.md", "docs", "pyproject.toml"]
